k8s/helloworld-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
    - http:
        paths:
          - path: /hello
            backend:
              serviceName: helloworld-backend-service-production
              servicePort: 8080
          - path: /actuator/health/*
            backend:
              serviceName: helloworld-backend-service-production
              servicePort: 8080
          - path: /random_image
            backend:
              serviceName: helloworld-backend-service-production
              servicePort: 8080
          - path: /covid
            backend:
              serviceName: helloworld-backend-service-production
              servicePort: 8080
